language/move-prover/spec-lang/tests/sources/variables_err.exp
error: spec global `M::ticks` undeclared

    ┌── tests/sources/variables_err.move:11:22 ───
    │
 11 │     invariant update ticks = tick + 1;
    │                      ^^^^^
    │

error: expected `num` but found `bool`

    ┌── tests/sources/variables_err.move:14:29 ───
    │
 14 │     invariant update tick = false;
    │                             ^^^^^
    │

error: assignment to spec globals not allowed for data invariants

    ┌── tests/sources/variables_err.move:17:5 ───
    │
 17 │     invariant tick = x;
    │     ^^^^^^^^^^^^^^^^^^^
    │

error: pack/unpack invariants must be assignments to spec globals

    ┌── tests/sources/variables_err.move:20:5 ───
    │
 20 │     invariant pack x == 0;
    │     ^^^^^^^^^^^^^^^^^^^^^^
    │

error: pack/unpack invariants must be assignments to spec globals

    ┌── tests/sources/variables_err.move:21:5 ───
    │
 21 │     invariant unpack x == 0;
    │     ^^^^^^^^^^^^^^^^^^^^^^^^
    │
